# Qnty

./: .gitignore  CONTRIBUTING.md  DISCLAIMER.md  KNOWN_LIMITATIONS.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.roo/: shadow_context.md
.secondbrain/: project.yaml
docs/: CURRENT_STATE.md  PROJECT_BOUNDARIES.md  paper_pnl_v1_schema.md
quantbot/: __init__.py  cli.py  experiment_cli.py  index_cli.py  version.py  walkforward_cli.py
scripts/: compare_base_vs_rfb.py  fetch_funding_rest.py  fetch_ohlcv_rest.py  health_receipt.py  paper_reconcile.py  paper_verify.py  qnty-paper-accounting.py  qnty-paper-lane-init.py  qnty-paper-pnl-init.sh  qnty-paper-sqlite-accounting.py  qnty-paper-sqlite-init.py  qnty-paper-sqlite-verify.py  release_smoke.sh  run_stage1.py  run_stage2_stress.py  run_stage4_net_carry.py  run_stage4_volnorm.py  run_validation_v2.py  stage1_net_carry_results.csv  stage1_results.csv  stage2_stress_results.csv  watermark_watchdog.py
tests/: conftest.py  test_cli.py  test_cost_robustness.py  test_determinism_smoke.py  test_end_to_end_runner.py  test_experiment.py  test_experiment_calibration.py  test_experiment_cli.py  test_experiment_gates.py  test_experiment_index.py  test_fetcher_end_time_ms.py  test_fixture_loader.py  test_funding_coverage.py  test_index_cli.py  test_inferential.py  test_manifest_verifier.py  test_paper_additive_lane_schema.py  test_paper_config_hash_golden.py  test_paper_forward_start_ts_normalization.py  test_paper_initialize_lane_database.py  test_paper_lane_config_hash.py  test_paper_lane_identity.py  test_paper_lane_init_wrapper.py  test_paper_ledger_batch_lane_stamping.py  test_paper_matched_null.py  (+29 more)
(+193 files in other folders)
