[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "quantbot"
version = "0.1.0"
description = "Cleanroom quantitative trading framework"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
qnty-replay = "quantbot.cli:main"
qnty-experiment = "quantbot.experiment_cli:main"
qnty-walkforward = "quantbot.walkforward_cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["quantbot*"]
exclude = ["configs*", "tests*"]
