[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "quantbot"
version = "0.1.0"
description = "Cleanroom crypto quant research harness"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "pandas",
  "requests",
]

[project.optional-dependencies]
test = [
  "pytest",
]

[project.scripts]
qnty-replay = "quantbot.cli:main"
qnty-experiment = "quantbot.experiment_cli:main"
qnty-walkforward = "quantbot.walkforward_cli:main"
qnty-index = "quantbot.index_cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["quantbot*"]
exclude = ["configs*", "tests*"]
